--- a/cv_8/css/style.css
+++ b/cv_8/css/style.css
@@ -36,7 +36,7 @@ body {
   }
   
   .articles {
-    background-image: url(http://localhost/javascript_cvicenia/cv_3/images/background.png);
+   /* background-image: url(http://localhost/javascript_cvicenia/cv_3/images/background.png); */
     
     background-repeat: no-repeat;
     background-position: center center;
@@ -91,7 +91,10 @@ body {
 
   .footer {
     margin-top: 20px;
-    background-color: #cca700;
+    background-color:     #33a5d9;
+    padding-bottom: 32000px;
+    margin-bottom: -32000px;
+    
 }
 
 /***
@@ -125,7 +128,7 @@ span.event_highlighted
   padding: 5px;
   background-color: white;
 
-  width: fit-content; 
+  width: fit-content;
 
   border-top: 1px ;
   border-left: 1px ;
@@ -144,6 +147,104 @@ span.event_highlighted
   margin-left:auto;
   margin-right:auto;
 }
+
+/***
+*  Stying form and app example exercises
+*/
+#submit {
+  margin-top: 10px;
+}
+
+.fieldset {
+  
+  border: 1px ;
+  -webkit-border-radius: 15px 0px 0px 0px;
+  border-radius: 15px 0px 0px 0px;
+  border-style: solid;
+  border-color: dimgrey;
+
+  border-left: 10px;
+  border-style: solid;
+  border-left-color: #0168ae;
+
+  -webkit-box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.32); 
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.32);
+
+  width:700x;
+  margin-left:auto;
+  margin-right:auto;
+  background-color: #eeeeee;
+
+}
+
+legend {
+  margin: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  color: #0168ae;
+}
+
+table {
+  padding: 10px;
+  margin: 10px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+tr {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding: 5px;
+  height: 50px; /* spacing among row */
+}
+
+input { /* color of input filed */
+  background-color: deepskyblue;
+}
+
+header {
+  background-color: rgb(59, 59, 59);
+}
+
+#Nadpis_headline {
+  color: rgb(255, 255, 255);
+  padding-bottom: 20px;
+}
+
+#next_image {
+  width: 35px;
+  margin-left: 30px;
+}
+
+#fireworks_image {
+  display: block;
+  width: 10px; /* init with for animation begin */
+  margin-left: 30px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+#decimal { /* spacing among elements ond second row */
+  
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.blue  {
+
+color: #0168ae ;
+}
+
+.green {
+
+color: green;
+}
+
+sub {
+  font-weight: bold;
+}
+
+
 
 
 
