Exercises  for JavaScript&jQuery v 1.0 - our first training lab is completed
Exercise nr. 7 finally  completed. This example in a simple way demonstrate how to validate data on client side, provide further information for user of form and finally validate all requirements before successful submission of form to evaluate.php script (demonstrate server side script with php).  This exercise conclude main part of examples for our students as a beginners, but who knows. Maybe there will be some extension if somebody will be interested in future.

--- a/cv_7/css/style.css
+++ b/cv_7/css/style.css
@@ -210,6 +210,18 @@ header {
   padding-bottom: 20px;
 }
 
+/* styling warnings and validation messages in form */
+
+.warning_red {
+  color: red;
+  padding: 5px;
+  margin-left: 3px;
+}
+
+#warning_message {
+  display: block;
+}
+
 
 
   
